--- a/index.html
+++ b/index.html
@@ -155,18 +155,22 @@
             grid-template-columns: 1fr;
             gap: 2rem;
         }
-        .services-column {
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-        }
         .service-card {
             background-color: white;
             padding: 1.5rem;
             border-radius: 1rem;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-            transition: box-shadow 0.3s;
+            transition: box-shadow 0.3s, opacity 0.5s, transform 0.5s;
             height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            opacity: 0;
+            transform: translateY(20px);
+        }
+        .service-card.fade-in {
+            opacity: 1;
+            transform: translateY(0);
         }
         .service-card:hover {
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -186,6 +190,7 @@
         .service-description {
             color: #4b5563;
             margin-bottom: 1rem;
+            flex-grow: 1;
         }
         .view-more {
             color: #2563eb;
@@ -195,6 +200,7 @@
             border: 1px solid #2563eb;
             border-radius: 9999px;
             transition: background-color 0.3s;
+            align-self: flex-start;
         }
         .view-more:hover {
             background-color: #eff6ff;
@@ -444,8 +450,17 @@
                 width: 50%;
             }
             .services-grid {
-                display: grid;
                 grid-template-columns: 3fr 2fr;
+                gap: 2rem;
+            }
+            .services-column-left {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 2rem;
+            }
+            .services-column-right {
+                display: flex;
+                flex-direction: column;
                 gap: 2rem;
             }
             .works-slider {
@@ -567,6 +582,17 @@
                 transform: scale(1) rotate(0deg);
             }
         }
+
+        /* Fade-in effect for all sections */
+        .fade-in-section {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.5s, transform 0.5s;
+        }
+        .fade-in-section.is-visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
     </style>
 </head>
 <body>
@@ -584,7 +610,7 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
+        <section id="home" class="hero fade-in-section">
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1>Transforming Ideas into Digital Reality</h1>
@@ -600,7 +626,7 @@
             </div>
         </section>
 
-        <section id="about" class="about">
+        <section id="about" class="about fade-in-section">
             <div class="container">
                 <h2>About Code Geniuses & Co.</h2>
                 <div class="about-content">
@@ -612,11 +638,11 @@
             </div>
         </section>
 
-        <section id="services" class="services">
+        <section id="services" class="services fade-in-section">
             <div class="container">
                 <h2>Our Services</h2>
                 <div class="services-grid">
-                    <div class="services-column">
+                    <div class="services-column-left">
                         <div class="service-card">
                             <svg class="service-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
@@ -642,7 +668,7 @@
                             <a href="#" class="view-more">View More</a>
                         </div>
                     </div>
-                    <div class="services-column">
+                    <div class="services-column-right">
                         <div class="service-card">
                             <svg class="service-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
@@ -665,7 +691,7 @@
             </div>
         </section>
 
-        <section class="contact-banner">
+        <section class="contact-banner fade-in-section">
             <div class="container">
                 <h2>Ready to Transform Your Digital Presence?</h2>
                 <p>Let's collaborate to create something extraordinary. Our team is ready to bring your vision to life with innovative solutions and exceptional design.</p>
@@ -673,7 +699,7 @@
             </div>
         </section>
 
-        <section class="process">
+        <section class="process fade-in-section">
             <div class="container">
                 <h2>Our Development Process</h2>
                 <div class="process-grid">
@@ -689,7 +715,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
                         </svg>
                         <h3 class="process-title">Development</h3>
-                        <p class="process-description">Our team brings your vision to life with                        <p class="process-description">Our team brings your vision to life with cutting-edge technologies.</p>
+                        <p class="process-description">Our team brings your vision to life with cutting-edge technologies.</p>
                     </div>
                     <div class="process-step">
                         <svg class="process-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -712,7 +738,7 @@
             </div>
         </section>
 
-        <section id="recent-works" class="recent-works">
+        <section id="recent-works" class="recent-works fade-in-section">
             <div class="container">
                 <h2>Recent Works</h2>
                 <div class="works-container">
@@ -971,6 +997,35 @@
                 }
             });
         });
+
+        // Fade-in effect for sections
+        function handleScrollAnimation() {
+            const sections = document.querySelectorAll('.fade-in-section');
+            sections.forEach(section => {
+                const sectionTop = section.getBoundingClientRect().top;
+                const windowHeight = window.innerHeight;
+                if (sectionTop < windowHeight * 0.75) {
+                    section.classList.add('is-visible');
+                }
+            });
+        }
+
+        // Fade-in effect for service cards
+        function handleServiceCardAnimation() {
+            const cards = document.querySelectorAll('.service-card');
+            cards.forEach((card, index) => {
+                setTimeout(() => {
+                    card.classList.add('fade-in');
+                }, index * 100);
+            });
+        }
+
+        // Initial call to handle animations
+        handleScrollAnimation();
+        handleServiceCardAnimation();
+
+        // Add scroll event listener
+        window.addEventListener('scroll', handleScrollAnimation);
     </script>
 </body>
 </html>
